--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
     "react-scripts": "5.0.1",
