--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "es-abstract": "^1.21.2",
     "font-awesome": "4.7",
     "joi": "^17.9.2",
     "joi-browser": "^13.4.0",
